@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: backgammon.h,v 1.16 2000/01/16 00:56:12 joseph Exp $
+ * $Id: backgammon.h,v 1.17 2000/01/16 01:06:57 gtw Exp $
  */
 
 #ifndef _BACKGAMMON_H_
@@ -101,9 +101,7 @@ extern void ShowBoard( void );
 extern void CommandAccept( char * ),
     CommandAgree( char * ),
     CommandDatabaseDump( char * ),
-#if HAVE_LIBGDBM
     CommandDatabaseRollout( char * ),
-#endif
     CommandDatabaseGenerate( char * ),
     CommandDatabaseTrain( char * ),
     CommandDecline( char * ),
